--- a/index.html
+++ b/index.html
@@ -422,7 +422,9 @@
             </div>
             <div class="midfield">
               <div class="position"><a href="#" class="player-link" data-player="Juan L">Juan L</a></div>
-              <div class="position"><a href="#" class="player-link" data-player="Nestor">Nestor</a></div>
+              <div class="position"><a href="#" class="player-link" data-player="Nestor">
+    <img src="nestor.png" alt="Nestor" style="width:50px; height:50px; border-radius:50%; display:block; margin:0 auto;">
+    <span class="player-name">Nestor</span>
             </div>
             <div class="position delantero"><a href="#" class="player-link" data-player="Curro">Curro</a></div>
           </div>
@@ -510,7 +512,7 @@
       "HDG":   { team:"CEPILLA FC",    pos:"Defensa" },
       "Mariankas":{team:"CEPILLA FC",  pos:"Defensa"},
       "Juan L":{ team:"CEPILLA FC",    pos:"Mediocampista" },
-      "Nestor":{ team:"CEPILLA FC",    pos:"Mediocampista" },
+      "Nestor":{ team:"CEPILLA FC",    pos:"Mediocampista", img:"nestor.png" },
       "Curro": { team:"CEPILLA FC",    pos:"Delantero" },
       "Antonio":{team:"RECREATIVO DE JUERGA",pos:"Portero"},
       "Viktor":{ team:"RECREATIVO DE JUERGA",pos:"Defensa"},
