--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           <td class="team-name"><span class="color-indicator"></span>BORUSSIA DONUTS</td><td>3</td><td>9</td><td>13</td><td>4</td>
         </tr>
 	 <tr class="drink-team">
-          <td class="team-name"><span class="color-indicator"></span>DRINK TEAM</td><td>3</td><td>7</td><td>15h</td><td>1</td>
+          <td class="team-name"><span class="color-indicator"></span>DRINK TEAM</td><td>3</td><td>7</td><td>15</td><td>1</td>
         </tr>
       </tbody>
     </table>
